# OpenGL_with_cpp

./: CMakeLists.txt
src/: main.cpp
src/dataStructures/: linkedList.cpp
src/window/: window.cpp  window.hpp
test/: main.cpp  test
